Add experimental vectorized XTEA impl on JVM
Uses the incubating Vector API